# finance-app-credhub

./: .gitignore  .projectzipper.json  COMO-GERAR-EXE.md  COMO-PUBLICAR-UPDATE.md  CORRECOES.md  GUIA-PUBLICACAO-AUTOMATICA.md  README.md  RELATORIO-AUDITORIA-CREDHUB.md  index.html  package-lock.json  package.json  publicar.bat  tailwind.config.js
.github/workflows/: publicar.yml
modelo-mailing/: modelo-mailing-exemplo.csv  modelo-mailing-vazio.csv
scripts/: build-personalizado.ps1  publicar-update.ps1
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: agentes.rs  audit.rs  auth.rs  backup.rs  bancos.rs  cliente_extras.rs  clientes.rs  comissoes.rs  convenios.rs  dashboard.rs  empresa.rs  feedback.rs  financeiro.rs  mod.rs  notificador.rs  propostas.rs  prospeccao.rs  relatorios.rs  sistema.rs
src-tauri/src/db/: schema.rs
src-tauri/src/models/: mod.rs
src/components/agentes/: AgentesView.tsx
src/components/auth/: LoginScreen.tsx  SetupWizard.tsx  SplashScreen.tsx
src/components/clientes/: ClienteDetalhes.tsx  ClienteForm.tsx  ClientesView.tsx
src/components/configuracoes/: AtualizacaoConfig.tsx  BackupConfig.tsx  BancosConfig.tsx  ConfigView.tsx  ConveniosConfig.tsx  EmpresaConfig.tsx  FeedbackConfig.tsx  MinhaContaConfig.tsx  TabelasComissao.tsx  UsuariosConfig.tsx
src/components/dashboard/: DashboardView.tsx
src/components/feedback/: FeedbackView.tsx
src/components/financeiro/: FinanceiroView.tsx
src/components/layout/: MainLayout.tsx
src/components/logs/: LogsView.tsx
src/components/manual/: ManualView.tsx
src/components/propostas/: PropostaForm.tsx  PropostasView.tsx
src/components/prospeccao/: ImportarLeadsModal.tsx  LeadDetalhes.tsx  ProspeccaoView.tsx
src/components/relatorios/: RelatoriosView.tsx
src/components/shared/: BrandLogo.tsx  (+7 more)
src/contexts/: EmpresaContext.tsx
src/lib/: api.ts  calculos.ts  csv-modelo.ts  formatters.ts  manual-content.ts  permissions.ts  relatorio-pdf.ts  salvar-arquivo.ts  toast-arquivo.tsx  types.ts  updater.ts
src/styles/: app.css
(+1 files in other folders)
