[package]
name = "credhub"
version = "1.2.0"
description = "CredHub — Sistema de Gestão de Crédito Consignado"
authors = ["CredHub"]
edition = "2021"

[lib]
name = "credhub_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "1.2.0", features = [] }

[dependencies]
tauri = { version = "1.2.0"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1.2.0"] }
serde_json = "1"
rusqlite = { version = "1.2.0"] }
chrono = "0.4"
bcrypt = "0.15"
uuid = { version = "1.2.0"] }
# Feedback — notificações multicanal
lettre = { version = "1.2.0"], default-features = false }
reqwest = { version = "1.2.0"], default-features = false }
urlencoding = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
