[package]
name = "credhub"
version = "1.2.3"
description = "CredHub — Sistema de Gestão de Crédito Consignado"
authors = ["CredHub"]
edition = "2021"

[lib]
name = "credhub_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "image-png", "image-ico"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4"] }
# Feedback — notificações multicanal
lettre = { version = "0.11", features = ["smtp-transport", "builder", "native-tls"], default-features = false }
reqwest = { version = "0.12", features = ["blocking", "json"], default-features = false }
urlencoding = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
